# LLVM-plugins

./: CMakeLists.txt  LICENSE
libs/: CMakeLists.txt
libs/Dispatcher/: CMakeLists.txt  Dispatcher.h  DispatcherContext.h  DispatcherFactory.h  MinimalTDispatcher.cpp  MinimalTDispatcher.h  TrivialDispatcher.cpp  TrivialDispatcher.h
